--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="container">
-            <img src="assets/freddie.png">
+            <img src="freddie.png">
             <h1>We are the Champions</h1>
             <textarea id="input-field" placeholder="Write your endorsement here"></textarea>
             <div class="input-btn">
